# ros2sysmon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  claude.md  current.md  package.xml  rules.md  spec.md  testingplan.md  tfdiag.txt
archive/: display_manager_latest.py  fast_config.yaml  static_config.yaml
config/: base_config.yaml  battery_saver.yaml  default_config.yaml  fast_config.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros2sysmon/: _version.py  collection_config.py  color_test.py  config.py  config_manager.py  data_manager.py  data_models.py  display.py  display_config.py  display_manager.py  display_manager_claude.py  help.txt  main.py  models.py  panel_layout_config.py  richtest.py  ros2_tf_diag.py  ros2_tf_diag.py.backup  ros_config.py  ros_node_info.py  run.py  shared_data.py  system_alert.py  system_metrics.py  test_windowed_config.yaml  textualtest.py  threshold_config.py  topic_config.py  topic_metrics.py
ros2sysmon/collectors/: network_collector.py  ros_collector.py  ros_models.py  system_collector.py  system_models.py
ros2sysmon/config/: __init__.py  collection_config.py  config.py  config_manager.py  display_config.py  threshold_config.py
ros2sysmon/core/: __init__.py  alerts.py  data_manager.py  keyboard_handler.py  shared_data.py
ros2sysmon/ui/: __init__.py  display_manager.py  sysmon.tcss
scripts/: ros2sysmon  run
